--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,18 @@ a em {
     display: block;
 }
 
+footer {
+    position: fixed;
+    bottom: 20px;
+    max-width: 45rem;    
+}
 
+footer a {
+    font-size: 18pt;
+    font-family: 'Crete Round', serif;
+    font-weight: bold;
+    
+}
 
 
 
