--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,13 @@ footer {
     border-top: 4px solid #FA2B16;
 }
 
+footer p {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 1em;
+    font-size: 18pt;
+}
+
 footer a {
     font-size: 18pt;
     font-weight: bold;
