--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,14 @@ h3 {
     color: #FA2B16;
 }
 
+h4 {
+    text-align: center;
+    margin: 0;
+    margin-bottom: -1em;
+    font-size: 20pt;
+    font-style: italic;
+}
+
 blockquote {
     margin: 0;
     margin-top: 2em;
