--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,11 @@ h4 {
     font-style: italic;
 }
 
+.quotes blockquote:first-child {
+    width: 47%;
+    margin-right: 3%;
+}
+
 blockquote {
     margin: 0;
     margin-top: 2em;
@@ -315,8 +320,10 @@ footer a {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
+    blockquote {float: none; width: 100% !important;}
+    p {margin-left: 0; margin-right: 0}
 }
 
 @media print,
