--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ html {
 
 ::selection {
     background: #FA2B16;
-    color: white;    
+    color: white;
     text-shadow: none;
 }
 
@@ -100,7 +100,8 @@ textarea {
    ========================================================================== */
 
 
-body:before, body:after {
+body:before,
+body:after {
     content: "";
     position: fixed;
     background: #FA2B16;
@@ -108,16 +109,19 @@ body:before, body:after {
     right: 0;
     height: 10px;
 }
+
 body:before {
     top: 0;
 }
+
 body:after {
     bottom: 0;
 }
+
 body {
     background-color: #FFF5EA;
     border-left: 10px solid #FA2B16;
-    border-right: 10px solid #FA2B16;  
+    border-right: 10px solid #FA2B16;
     font-family: 'Crete Round', serif;
 }
 
@@ -185,7 +189,7 @@ blockquote {
 }
 
 blockquote a {
-    color: #666;     
+    color: #666;
 }
 
 blockquote cite {
@@ -194,33 +198,123 @@ blockquote cite {
     font-style: normal;
 }
 
-.intro {
+#manifesto p.intro {
     font-weight: 600;
     font-family: 'Overpass Mono', fixed;
 }
 
 p {
+    font-size: 16pt;
+}
+
+#manifesto p {
     font-size: 14pt;
     font-family: 'Fira Sans', sans-serif;
     margin-left: 2em;
     margin-right: 2em;
 }
 
+
+
 .marker {
     text-align: center;
     color: #888;
 }
 
+#sign {
+    border-bottom: 4px solid #FA2B16;
+}
+
+#sign-embedded {
+    border: 1px solid red;
+    height: 30em;
+    border-radius: 1em;
+    background-color: antiquewhite;
+}
+
+#share {
+    background-color: antiquewhite;
+    padding: 2em;
+    border-radius: 1em;
+    text-align: center;
+}
+
+#share p {
+    font-family: 'Fira Sans', sans-serif;
+}
+
+.thanks {
+    font-size: 26pt;
+    margin-top: 0;
+}
+
+.thanks .far {
+    display: block;
+    font-size: 250%;
+    margin-bottom: 0.2em;
+
+}
+
+
+button,
+.button {
+    background-color: #FA2B16;
+    color: white;
+    font-size: 26pt;
+    padding: 0.5em 1em;
+    border-radius: 0.25em;
+    border: none;
+    text-align: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    display: block;
+    margin: 0 auto;
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+}
+
+button i,
+.button i {
+    margin-right: 0.25em;
+}
+
+.button.small {
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 16pt;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+    margin-right: 0.5em;
+}
+
+.twitter {
+    background-color: #1da1f2;
+}
+
+.facebook {
+    background-color: #4267b2;
+}
+
+.messenger {
+    background-color: #0084ff;
+}
+
+.whatsapp {
+    background-color: #01e675;
+}
+
+.buttons {
+    text-align: center;
+    margin-top: 1em;
+}
+
 footer {
-    max-width: 45rem;    
+    max-width: 45rem;
     background-color: #FFF5EA;
     margin-top: 2em;
     padding-top: 2em;
-    border-top: 4px solid #FA2B16;
 }
 
 footer p {
-    font-family: 'Crete Round', serif;
     width: 100%;
     margin: 0;
     margin-bottom: 1em;
@@ -232,6 +326,12 @@ footer a {
     font-weight: bold;
 }
 
+#legal {
+    font-size: 10pt;
+    font-family: 'Fira Sans', sans-serif;
+    margin-top: 3em;
+    color: #999;
+}
 
 
 /* ==========================================================================
@@ -244,6 +344,10 @@ footer a {
 
 .hidden {
     display: none !important;
+}
+
+.show {
+    display: block !important;
 }
 
 /*
@@ -264,7 +368,8 @@ footer a {
     padding: 0;
     position: absolute;
     width: 1px;
-    white-space: nowrap; /* 1 */
+    white-space: nowrap;
+    /* 1 */
 }
 
 /*
@@ -306,8 +411,10 @@ footer a {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
@@ -321,15 +428,73 @@ footer a {
    ========================================================================== */
 
 @media only screen and (max-width: 35em) {
+
     /* Style adjustments for viewports that meet the condition */
-    blockquote {float: none; width: 100% !important;}
-    p {margin-left: 0; margin-right: 0}
+
+
+    h1 img {
+        padding-top: 1em;
+    }
+
+    h2 {
+        font-size: 20pt;
+        line-height: 1.2;
+    }
+
+    h3 {
+        font-size: 18pt;
+        line-height: 1.1;
+    }
+
+    h4 {
+        font-size: 16pt;
+    }
+
+    blockquote {
+        float: none;
+        width: 100% !important;
+        font-size: 12pt;
+        line-height: 1.3;
+    }
+
+    p {
+        font-size: 12pt;
+    }
+
+    #manifesto p {
+        font-size: 12pt;
+        margin-left: 0;
+        margin-right: 0
+    }
+
+    #manifesto p.intro {
+        font-size: 11pt;
+    }
+
+    button,
+    .button {
+        font-size: 20pt;
+
+    }
+
+    .button.small {
+        font-size: 12pt;
+    }
+
+    #share {
+        padding: 0.75em;
+    }
+
+    .thanks {
+        font-size: 18pt;
+        line-height: 1.1;
+    }
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -340,11 +505,13 @@ footer a {
    ========================================================================== */
 
 @media print {
+
     *,
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster */
+        color: #000 !important;
+        /* Black prints faster */
         -webkit-box-shadow: none !important;
         box-shadow: none !important;
         text-shadow: none !important;
@@ -356,11 +523,11 @@ footer a {
     }
 
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
 
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
 
     /*
@@ -376,6 +543,7 @@ footer a {
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
