--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,12 @@ p {
     background-color: antiquewhite;
 }
 
+#skip {
+    text-align: center;
+    margin-top: -2em;
+    margin-bottom: 3em;
+}
+
 #share {
     background-color: antiquewhite;
     padding: 2em;
